address @rtn comments

--- a/_posts/2019-06-25-desktop.md
+++ b/_posts/2019-06-25-desktop.md
@@ -8,10 +8,10 @@ There are new Desktop releases (0.104.0) with a new Rust-based encryption engine
 better Mac and Linux release packaging and several other UX improvements which 
 we detail further below.  See "Assets" on our [github releases page](https://github.com/deltachat/deltachat-desktop/releases/tag/v0.104.0) for the respective downloads. 
 
-**Import Notes about this release**:
+**Important Notes about this release**:
 
 - **Don't forget to Synchronize Android/iOS to Desktop:** if you install Delta Chat desktop next
-  to an an already existing mobile version you need to synchronize your setups. 
+  to an already existing mobile version you need to synchronize your setups. 
   After configuring Delta Chat Desktop, on Android trigger the "Send Autocrypt Setup message" in 
   advanced settings and accept the Setup message from your Desktop app. After correctly entering 
   the security/confirmation number (presented om mobile, typed in on desktop) you will see 
@@ -52,16 +52,16 @@ Here are the most major technical/UX highlights of the 0.104.0 Desktop Release:
   Also openssl and all other dependencies are included in the dmg
   install file. This means no more `brew install ...` for mac users!
 
-  There are now .deb archives for all major Ubuntu versions**
+  There are now **.deb archives for all major Ubuntu versions**
   They each pull in all needed dependencies for the particular Ubuntu versions, 
-  so you don't need to install them manually anymore.  
+  so you don't need to manually install dependencies.
 
   Good news for ArchLinux users too: the **updated deltachat-desktop-git AUR 
   package now uses RPGP too**.
 
 Besides, many smaller features and fixes landed with this Desktop release: 
 
-- draft new messages are now saved on a per-chat basis 
+- draft new messages are now saved on a per-chat basis
 
 - some performance fixes which make the UI more fluid (more are coming!) 
 
