--- a/_posts/2019-06-25-desktop.md
+++ b/_posts/2019-06-25-desktop.md
@@ -67,7 +67,7 @@ Besides, many smaller features and fixes landed with this Desktop release:
 
 - importing and exporting keys works again 
 
-- a lot of refactoring of the backand/state handling took place,
+- a lot of refactoring of the backend/state handling took place,
   to simplify future changes and maintenance. 
 
 - the desktop release now has support for simple markdown. Give it a try!
