also use headlines for details

--- a/_posts/2019-06-25-desktop.md
+++ b/_posts/2019-06-25-desktop.md
@@ -71,6 +71,8 @@ so you don't need to manually install dependencies.
 Good news for ArchLinux users too: the **updated deltachat-desktop-git AUR 
 package now uses RPGP too**.
 
+## Several UX and functionality fixes
+
 Besides, many smaller features and fixes landed with this Desktop release: 
 
 - draft new messages are now saved on a per-chat basis
