add link to RPGP

--- a/_posts/2019-06-25-desktop.md
+++ b/_posts/2019-06-25-desktop.md
@@ -4,8 +4,7 @@ author: Jikstra, holga
 ---
 
 <img src="../assets/blog/20190625-desktop.png" width="400" style="float: right ; width: 400" /> 
-There are new Desktop releases (0.104.0) with a new Rust-based encryption engine (RPGP),
-better Mac and Linux release packaging and several other UX improvements which 
+There are new Desktop releases (0.104.0) with a new Rust-based encryption engine, [RPGP](https://github.com/rpgp/rpgp), better Mac and Linux release packaging and several other UX improvements which 
 we detail further below.  See "Assets" on our [github releases page](https://github.com/deltachat/deltachat-desktop/releases/tag/v0.104.0) for the respective Desktop downloads. 
 
 **Important Notes about this release**:
