--- a/_posts/2019-06-28-android.md
+++ b/_posts/2019-06-28-android.md
@@ -1,41 +1,34 @@
 ---
-title: New stable android release with new profile, video and much, much more
+title: New stable Delta Chat Android with improved group-profiles, video recording, notifications, ... 
 author: bjørn, holga
 ---
 
-During the [Rustocalypse](https://delta.chat/en/2019-05-08-xyiv#the-coming-delta-chat-rustocalypse)
-there was also some time to push the android ui forward,
-to make the whole app stable
-and to implement several long-awaited features.
-
-## And here it is: Delta Chat Android 0.500
-
-Among the new features there is the completly **revamped chat-profile** that combines
-gallery, document, settings, member list and shared chats 
-ina tab layout now:
+A new and much enhanced Android version (0.500.0) is released and available
+on Google-Play and soon F-droid. It is the most feature-rich, UX-refined and robust 
+version of Delta Chat to date and incorporates chinese translations now, along
+with updates to 19 other localizations.  There now is a **revamped Chat
+profile view** which combines gallery, document, settings and member list
+in a new tab layout, apart from allowing to see "shared chats" with individual contacts. 
 
 <img src="../assets/blog/20190628-gallery.png" width="200" /> 
 <img src="../assets/blog/20190628-documents.png" width="200" /> 
 <img src="../assets/blog/20190628-shared-chats.png" width="200" /> 
 
-Other highlights are:
+Other major highlights are:
 
-- **video recording**
-- improved **notification** handling
+- **video recording**, including automatic recoding to smaller size 
 - **forward/share** allows creating new chats, searching, direct share and more
-- improve **ui:** touch friendly, better looking
-- **sustainability** - improved support even for older phones
+- improved **notification** handling, should now behave more intuitively
+- improved **ui:** touch friendly, better looking
+- **improved support for older phones** even for older phones
 
-And: Among several updated **translations**, we are very happy to see introduce 
-two **Chinese** translations.
-
-See the [android changelog](https://raw.githubusercontent.com/deltachat/deltachat-android/HEAD/CHANGELOG.md) for a more detailed overview -
-and also note the list of all the people who have **contributed** to this version,
+See the [Android changelog](https://raw.githubusercontent.com/deltachat/deltachat-android/HEAD/CHANGELOG.md) for a more detailed overview - and also note the list of all the people who have **contributed** to this version,
 **thanks a thousand times!**
 
 <img src="../assets/blog/20190628-video.png" width="200" /> 
 <img src="../assets/blog/20190628-media-quality.png" width="200" />
 <img src="../assets/blog/20190628-language.png" width="200" />
 
-The version is already available on gplay and will be available on f-droid during the next days.
-As usual, see the [download section](download) for all sources.
+On the [download page](download) you'll also find the [Delta Chat Desktop releases](https://delta.chat/en/2019-06-25-desktop) from yesterday. Delta Chat is multi-device capable. 
+
+You are very welcome to contribute [PRs or concise bug reports](https://github.com/deltachat/deltachat-android) but note that feature discussions usually happens first on the [support forum](https://support.delta.chat). 
