too many older phones

--- a/_posts/2019-06-28-android.md
+++ b/_posts/2019-06-28-android.md
@@ -20,7 +20,7 @@ Other major highlights are:
 - **forward/share** allows creating new chats, searching, direct share and more
 - improved **notification** handling, should now behave more intuitively
 - improved **ui:** touch friendly, better looking
-- **improved support for older phones** even for older phones
+- improved **support for older phones**
 
 See the [Android changelog](https://raw.githubusercontent.com/deltachat/deltachat-android/HEAD/CHANGELOG.md) for a more detailed overview - and also note the list of all the people who have **contributed** to this version,
 **thanks a thousand times!**
