--- a/fr/download.po
+++ b/fr/download.po
@@ -115,7 +115,7 @@ msgstr ""
 
 #: ../en/download.md:43
 msgid ""
-"- [testflight invite page](https://testflight.apple.com/join/WVoYFOZe) for "
+"- [testflight invite page](https://testflight.apple.com/join/uEMc1NxS) for "
 "your iPhone or iPad."
 msgstr ""
 
