--- a/it/download.po
+++ b/it/download.po
@@ -133,10 +133,10 @@ msgstr ""
 
 #: ../en/download.md:43
 msgid ""
-"- [testflight invite page](https://testflight.apple.com/join/WVoYFOZe) for "
+"- [testflight invite page](https://testflight.apple.com/join/uEMc1NxS) for "
 "your iPhone or iPad."
 msgstr ""
-"- [pagina di invito testflight](https://testflight.apple.com/join/WVoYFOZe) "
+"- [pagina di invito testflight](https://testflight.apple.com/join/uEMc1NxS) "
 "per il tuo iPhone o iPad."
 
 #: ../en/download.md:45
