--- a/nb/download.po
+++ b/nb/download.po
@@ -111,7 +111,7 @@ msgstr ""
 
 #: ../en/download.md:43
 msgid ""
-"- [testflight invite page](https://testflight.apple.com/join/WVoYFOZe) for "
+"- [testflight invite page](https://testflight.apple.com/join/uEMc1NxS) for "
 "your iPhone or iPad."
 msgstr ""
 
