--- a/pt/download.po
+++ b/pt/download.po
@@ -134,11 +134,11 @@ msgstr ""
 
 #: ../en/download.md:43
 msgid ""
-"- [testflight invite page](https://testflight.apple.com/join/WVoYFOZe) for "
+"- [testflight invite page](https://testflight.apple.com/join/uEMc1NxS) for "
 "your iPhone or iPad."
 msgstr ""
 "- [Página de convite do "
-"testflight](https://testflight.apple.com/join/WVoYFOZe) para o iPhone ou "
+"testflight](https://testflight.apple.com/join/uEMc1NxS) para o iPhone ou "
 "iPad."
 
 #: ../en/download.md:45
